# lev

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  lev.pyi  prek.toml  pyproject.toml  test_affix.rs  zensical.toml
.claude/: settings.json
.claude/agents/: code-cartographer.md  competitor-scout.md  microarch-checker.md  profile-runner.md
.github/workflows/: benchmark.yml  docs.yml  prek.yaml  release.yml  test.yml
docs/: api.md  index.md
scripts/: benchmark.py  benchmark_by_length.py  dump_bench.py  dump_bench_after.py  install_dev.sh
src/: lib.rs
src/lev/: __init__.py
tests/: conftest.py  test_lev.py  test_oracle.py
