
[package]
name = "lev"
version = "0.1.0"
edition = "2021"

[lib]
# The name of the native library.
name = "lev"
# "cdylib" is necessary to produce a shared library for Python to import from.
# "rlib" enables `cargo test` against the same crate.
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.28.3", features = ["extension-module"] }

[build-dependencies]
pyo3-build-config = "0.28.3"

[profile.release]
lto = "fat"
codegen-units = 1
