[build-system]
requires = ["maturin>=1.13.1,<2.0"]
build-backend = "maturin"

[project]
name = "lev-rs"
authors = [
  { name="Markus Bilz", email="github@markusbilz.com" },
]
description = "A extremely fast Python library for the Levenshtein distance, written in Rust 🦀."
readme = "README.md"
license = {file = "LICENSE"}
version = "0.2.0"
requires-python = ">=3.10"
keywords = [
    "distance",
    "levenshtein",
    "strings",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: OS Independent",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
]

[project.optional-dependencies]
dev = [
    "commitizen",
    "maturin",
    "prek",
    "pytest-codspeed",
    "pytest-cov",
    "pytest",
    "ruff",
]
docs = [
    "zensical",
    "mkdocstrings[python]",
]
benchmark = [
    "edlib",
    "editdistance>=0.8.1",
    "matplotlib>=3.10.9",
    "matplotx>=0.3.10",
    "numpy>=2.0",
    "rapidfuzz>=3.14.5",
]

[project.urls]
"Homepage" = "https://github.com/KarelZe/lev"
"Bug Tracker" = "https://github.com/KarelZe/lev/issues"

[tool.pytest.ini_options]
minversion = 8.0
addopts = "-ra -p no:warnings -v --cov --cov-report term-missing --doctest-modules"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
omit = [
    "debug_*.py",
    "tclf/tests/*",
]
branch = true

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "if self\\.debug",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
    "if self.verbose:"
    ]
show_missing = true

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.2.0"
tag_format = "$version"
version_files = [
    "Cargo.toml:version",
    "pyproject.toml:version",
    "version",
]
bump_message = "chore: bump version $current_version → $new_version 👒"
update_changelog_on_bump = true
annotated_tag = true

[tool.maturin]
# bindings = "bin"
module-name = "lev"
# python-source = "python"
strip = true

[tool.ruff]

line-length = 120

[tool.ruff.lint]

# See rules: https://beta.ruff.rs/docs/rules/
select = [
    "A",    # shadow builtins
    "C4",   # Catch incorrect use of comprehensions, dict, list, etc
    "D",    # pydocstyle
    "DOC",  # pydoclint
    "E",    # PyCodeStyle errors
    "F",    # Pyflakes rules
    "FA",   # Enforce from __future__ import annotations
    "I",    # isort
    "ICN",  # Use common import conventions
    "N",    # enforce naming conventions, e.g. ClassName vs function_name
    "RET",  # Good return practices
    "RUF",  # ruff-specific rules
    "SIM",  # Common simplification rules
    "TC",   # Enforce importing certain types in a TYPE_CHECKING block
    "TD",   # Be diligent with TODO comments
    "TID",  # Some good import practices
    "UP",   # Warn if certain things can changed due to newer Python versions
    "W",    # PyCodeStyle warnings
]

ignore = [
    "D203",
    "D212",
    "E501"
    ]

preview = true

[tool.ruff.format]
preview = true

[dependency-groups]
dev = [
    "editdistance>=0.8.1",
    "edlib>=1.3.9.post1",
    "matplotlib>=3.10.9",
    "matplotx>=0.3.10",
    "pylev>=1.4.0",
    "rapidfuzz>=3.14.5",
]

[tool.ruff.lint.isort]
known-first-party = ["lev"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
